--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^4.1.4"
   },
   "scripts": {
+    "build": "parcel build ./src/index.html",
     "start": "parcel ./src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
